# simple

./: .flake8  .gitignore  HurstExp.py  README.md  backtest.py  binance.ohlc.ipynb  binance.py  environment.yml  funcs.py  geneopt.py  hurst_exponent.py  numpy_ext.py  ohlc.chart.ipynb  ohlc.py  plotly_charts.py  postBuild  pretty.py  pyproject.toml  renko.test.ipynb  requirements.txt  setup.py  simple.gene.ipynb  simple.model.ipynb  very.simple.RSX.ipynb  very.simple.backtest.ipynb  very.simple.chart.ipynb  very.simple.param.ipynb
data/: binance_archive.py
examples/: OHLC.synthetic.chart.ipynb  RSX.debounced.ipynb  RSX.renko.ipynb  adaptive.RSX.backtest.ipynb  binance.ADF.ipynb  binance.PCA.ipynb  binance.RSI.detailed.ipynb  binance.RSI.ipynb  binance.kalman.ipynb  binance.ohlc.ipynb  binance.pct_change.ipynb  binance.sliding.correlation.ipynb  binance.trend.ipynb  binance.weekly.profile.ipynb  compare.ma.ipynb  debounce.chart.ipynb  debounce.heatmap.chart.ipynb  finam.sliding.correlation.ipynb  finam.weekly.profile.ipynb  gene.minimize.variance.ipynb  gene.xma.ipynb  heatmap.indicator.chart.ipynb  hurst.chart.ipynb  hurst.synthetic.chart.ipynb  imbalance.indicator.chart.ipynb  mann.kendall.chart.ipynb  model2.db.ipynb  model2.grid.ipynb  model2.test.ipynb  ohlc.chart.ipynb  orderlog.activity.ipynb  qgrid.test.ipynb  renko.chart.ipynb  renko.interactive.chart.ipynb  renko.test.ipynb  show.grid.ipynb  simple.debounce.ipynb  simple.gene.RSX.ipynb  simple.gene.filter.ipynb  simple.gene.ipynb  (+8 more)
simple/: __init__.py  backtest.py  (+17 more)
simple.egg-info/: PKG-INFO  SOURCES.txt
(+18 files in other folders)
